# mcp-ultra-reborn

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  requirements.txt
.codex/: config.toml
docs/: investigacao-claude-internals.md  investigacao-qwen-internals.md  plano-pendentes.md  resumo-qwen-internals.md
mcp-deepseek-web/: .mcp.json  README.md  deepseek_mcp.py  testar.py
mcp-deepseek-web/deepseek_bridge/: __init__.py  bridge.py  server.py
mcp-deepseek-web/extension/: background.js  content.js  manifest.json
mcp-gemini-web/: .mcp.json  README.md  gemini_mcp.py  requirements.txt  testar.py
mcp-gemini-web/docs/: ARQUITETURA.md  TROUBLESHOOTING.md
mcp-gemini-web/extension/: background.js  content.js  manifest.json
mcp-gemini-web/gemini_bridge/: __init__.py  bridge.py  server.py
mcp-geracao-objetos-3d/: .gitignore  README.md  assembler.py  definicoes-gerador-carro.md  geracao_3d_mcp.py
mcp-geracao-objetos-3d/api/: __init__.py  operations.py  primitives.py  selectors.py  validators.py
mcp-geracao-objetos-3d/bridge/: server.py
mcp-qwen-coder/: .env.example  README.md  pyproject.toml
mcp-qwen-coder/docs/: multi-instancia-qwen.md
mcp-qwen-coder/scripts/: clone-qwen-profile.ps1  smoke_test.py
mcp-qwen-coder/src/mcp_qwen_coder/: __init__.py  config.py  planner.py  server.py  shell.py
mcp-qwen-controller/: README.md  pyproject.toml  qwen_mcp.js  qwen_mcp.py
mcp-qwen-controller/qwen_bridge/: cdp.py  controller.py  driver.js  server.py
mcp-qwen-controller/scripts/: launch_multi_agents.py  patch_qwen.py
scripts/: start-http.ps1
(+87 files in other folders)
