[project]
name = "mcp-qwen-coder"
version = "0.1.0"
description = "Servidor MCP que dá a uma IA web/local acesso ao terminal (CMD/shell), agindo como um agente local."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-qwen-coder = "mcp_qwen_coder.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_qwen_coder"]
