[project]
name = "mcp-qwen-controller"
version = "0.1.0"
description = "Servidor MCP para controlar o Qwen Chat Desktop via CDP/HTTP, com suporte a orquestração multi-agente local."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "websockets>=12.0",
]

[project.scripts]
mcp-qwen-controller = "qwen_bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qwen_bridge"]
